Coverity analysis defect 173569: Explicit null dereferenced

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-05-26
    • 1
    • None
    • 3
    • TBD
    • None
    • None
    • None
    • None
    • None
    • None

      Explicit null dereferenced

      A null pointer dereference will occur. Dereference of an explicit null value
      /data/mci/12589613ae961649d349d5c17866df2a/bazel_cache/c5778557a13dc68b3dc104090c678ab1/execroot/_main/src/mongo/db/catalog/collection_impl.cpp:745: FORWARD_NULL 173569 "explicitMatchExpr" is initialized empty.
      /data/mci/12589613ae961649d349d5c17866df2a/bazel_cache/c5778557a13dc68b3dc104090c678ab1/execroot/_main/src/mongo/db/catalog/collection_impl.cpp:782: FORWARD_NULL 173569 Assigning: "combinedMatchExpr" = "std::move(explicitMatchExpr)".
      /data/mci/12589613ae961649d349d5c17866df2a/bazel_cache/c5778557a13dc68b3dc104090c678ab1/execroot/_main/src/mongo/db/catalog/collection_impl.cpp:789: FORWARD_NULL 173569 Attempting to access the managed object of an empty smart pointer "combinedMatchExpr".

            Assignee:
            Wolfee Farkas
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: