SERVER-104515 Fix for Coverity analysis defect 173569: Explicit null dereferenced (#36446)

GitOrigin-RevId: cd2e1883da92d874cb4621457db9418232fcb8ea